update: project & block code revise

--- a/_posts/2025-03-26-plotly.md
+++ b/_posts/2025-03-26-plotly.md
@@ -49,6 +49,12 @@ Which generates:
 }
 ```
 
+````python
+def create_answer():
+  print(1)
+  return None
+````
+
 Also another example chart.
 
 ````markdown
